--- a/Budgy-Client/budgy/src/components/Home/Home.module.css
+++ b/Budgy-Client/budgy/src/components/Home/Home.module.css
@@ -1,9 +1,30 @@
 .first-section{
     height: 600px;
-    background-color: crimson;
+    background-color: rgb(163, 100, 113);
+    display: flex;
+    flex-direction: column;
 }
 
 .main-header{
     text-align: center;
-    padding-top: 20px;;
+    padding-top: 20px;
+    color: white;
+    margin: auto;
+    padding-top: 50px;
+}
+
+.set-up{
+    margin: auto;
+}
+
+.set-up-btn{
+    position: relative;
+    top: -50px;
+    color: rgb(163, 100, 113);
+    padding: 10px 20px;
+    border-radius: 12px;
+    border-color: transparent;
+    font-weight: bold;
+    font-size: 20px;
+    background-color: white;
 }
