--- a/Budgy-Client/budgy/src/components/Register/Register.module.css
+++ b/Budgy-Client/budgy/src/components/Register/Register.module.css
@@ -8,22 +8,35 @@
     border-radius: 10px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     gap: 10px;
-    text-transform: uppercase;
-    
+    text-transform: uppercase;  
 }
 
 .submit-btn{
     background-color: white;
-    width: 50%;
+    width: 20%;
     color: rgb(187, 113, 128);
     font-size: 20px;
     font-weight: bold;
-    position: relative;
-    left: 160px;
+    margin-top:20px;
 }
 
 .register-label{
     color: white;
     font-weight: bold;
+}
+
+.header{
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    position: relative;
+    top: -20px;
+    text-transform: initial;
+}
+
+.register-group{
+    width: 60%;
 }
