--- a/Budgy-Client/budgy/src/components/Register/Register.module.css
+++ b/Budgy-Client/budgy/src/components/Register/Register.module.css
@@ -1,8 +1,16 @@
+.wrapper{
+    display: flex;
+    align-items: center;
+    flex-direction: column; 
+    justify-content: center;
+    margin-top: 10px;
+}
+
 .register-form {
-    width: 40%;
+    width: 35%;
     margin:auto;
     position: relative;
-    top: 100px;
+    top: 50px;
     background-color: rgb(187, 113, 128);
     padding: 50px;
     border-radius: 10px;
@@ -10,7 +18,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 10px;
+    gap: 8px;
     text-transform: uppercase;  
 }
 
@@ -20,7 +28,7 @@
     color: rgb(187, 113, 128);
     font-size: 20px;
     font-weight: bold;
-    margin-top:20px;
+    margin-top:10px;
 }
 
 .register-label{
@@ -39,4 +47,10 @@
 
 .register-group{
     width: 60%;
+}
+
+.error {
+    color:black;
+    font-family: bold;
+    text-transform: uppercase;
 }
