Login and logout ready

--- a/Budgy-Client/budgy/src/components/Login/Login.module.css
+++ b/Budgy-Client/budgy/src/components/Login/Login.module.css
@@ -40,3 +40,12 @@
 .login-group{
     width: 60%;
 }
+
+.form-footer{
+    margin-top: 10px;
+}
+
+.footer-text{
+    color: white;
+    font-weight: bold;
+}
